# python-langchain-test

./: .env.example  .gitignore  OPENROUTER_SETUP.md  README.md  TOPIC_SYSTEM_IMPLEMENTATION.md  config.py  main.py  pyproject.toml  research_assistant.db
scripts/: migrate_to_topic_system.py
src/adapters/: base.py  cli.py  telegram.py
src/agent/: core.py
src/agent/tools/: email.py  memory.py  newsletter.py  search.py
src/memory/: database.py  models.py  schema.sql  service.py
src/topic/: __init__.py  manager.py  matcher.py  selector.py
src/utils/: formatters.py  langsmith.py
tasks/: 0001-prd-ai-research-assistant-agent.md  PLAN-topic-agnostic-agent.md  tasks-0001-prd-ai-research-assistant-agent.md
tests/: test_adapters.py  test_agent_core.py  test_memory_service.py  test_tools.py
